# AlgLW2

./: abs_drains.py  diam.py  loop.py  pyproject.toml
Программы/: loop.py
